# src/app/Models/Question.php
@@ -4,6 +4,20 @@ namespace App\Models;
 
 use Illuminate\Database\Eloquent\Model;
 use Illuminate\Auth\Access\AuthorizationException;
+/**
+ * @OA\Schema(
+ *     schema="Question",
+ *     type="object",
+ *     title="Question",
+ *     properties={
+ *         @OA\Property(property="id", type="integer", format="int64"),
+ *         @OA\Property(property="survey_id", type="integer", format="int64"),
+ *         @OA\Property(property="text", type="string"),
+ *         @OA\Property(property="type", type="integer", format="int64"),
+ *     },
+ *     required={"title", "description", "active"},
+ * )
+ */
 
 class Question extends Model
 {
